--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,5 @@ nbproject/
 test.php
 core/config/common.config.php
 plugins
-sftp-config.json
+deployment-config.json
 .project
-.DS_Store
-Thumbs.db
-*.php~
