--- a/resources/gshd/package.json
+++ b/resources/gshd/package.json
@@ -3,11 +3,10 @@
   "version": "0.0.1",
   "description": "Use for Google Smarthome jeedom local discover",
   "private": true,
-  "main": "server.js",
+  "main": "gshd.js",
   "scripts": {
-    "lint": "tslint --project .",
-    "build": "tsc --noEmit",
-    "start": "ts-node server.ts"
+    "start": "node gshd.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jeedom",
   "license": "Apache-2.0",
@@ -15,13 +14,5 @@
     "cbor": "^4.1.5",
     "yargs": "^13.2.4",
     "ts-node": "^8.2.0"
-  },
-  "devDependencies": {
-    "@types/cbor": "^2.0.0",
-    "@types/node": "^12.0.8",
-    "@types/yargs": "^13.0.0",
-    "standard": "^12.0.1",
-    "tslint": "^5.17.0",
-    "typescript": "^3.5.1"
   }
 }
