--- a/resources/gshd/package.json
+++ b/resources/gshd/package.json
@@ -12,7 +12,6 @@
   "license": "Apache-2.0",
   "dependencies": {
     "cbor": "^4.1.5",
-    "yargs": "^13.2.4",
-    "ts-node": "^8.2.0"
+    "yargs": "^13.2.4"
   }
 }
